--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bandsintown": "^1.0.1",
-    "dotenv": "^6.2.0",
+    "dotenv": "^8.0.0",
     "i": "^0.3.6",
-    "inquirer": "^6.2.2",
+    "inquirer": "^6.5.0",
+    "lodash": "^4.17.14",
     "moment": "^2.24.0",
-    "node-spotify-api": "^1.0.7"
+    "node-spotify-api": "^1.1.1"
   }
 }
