--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "i": "^0.3.6",
     "inquirer": "^6.5.0",
     "lodash": "^4.17.14",
+    "lodash.template": "^4.5.0",
     "moment": "^2.24.0",
     "node-spotify-api": "^1.1.1"
   }
